--- a/P005601.opf/meta.yml
+++ b/P005601.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P005601
+id: P005601
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W29552
   title: དཔྱོད་ལན་གཎཌིའི་སྒྲ་དབྱངས
-  volume: ''
   author: ''
+  volumes: {}
