--- a/P005601.opf/layers/v001/Pagination.yml
+++ b/P005601.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 09837e4728e24041b610c1959d190d8e
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   cfb9ea6af3614125b1a98ba3f4bce2da:
