--- a/P005601.opf/meta.yml
+++ b/P005601.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P005601
 initial_creation_type: ocr
+created_at: 30/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W29552
   title: དཔྱོད་ལན་གཎཌིའི་སྒྲ་དབྱངས
